[package]
name = "coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytes = "1.10.1"
device = { version = "0.1.0", path = "../device" }
hex = "0.4.3"
rand = "0.9.2"
tokio = { version = "1.46.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tunnels = { version = "0.1.0", path = "../tunnels" }
types = { version = "0.1.0", path = "../types" }
