[package]
name = "olla-node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
device = { version = "0.1.0", path = "../device" }
hex = "0.4.3"
pnet = "0.35.0"
rand = "0.9.2"
rustls = "0.23.31"
serde = "1.0.219"
serde_derive = "1.0.219"
tokio = { version = "1.46.1", features = ["full"] }
tokio-rustls = "0.26.2"
toml = "0.9.2"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
tun-rs = { version = "2.5.2", features = ["async"] }
tunnels = { version = "0.1.0", path = "../tunnels" }
webpki-roots = "1.0.2"
